@startuml class_core
!theme plain
title TDMS - Core System Structure

package "Core System" {
  class Database {
    name: String
    tables: Dictionary
    --
    create_table(name, columns)
    drop_table(name)
    get_table(name)
    insert_row(table, data)
    edit_row(table, index, data)
    save(filepath)
    load(filepath)
  }

  class Table {
    name: String
    columns: List
    rows: List
    --
    add_row(data)
    update_row(index, data)
    get_rows()
  }

  class Column {
    name: String
    type: String
  }

  class Row {
    values: Dictionary
  }

  class TypeValidator {
    --
    validate_integer(value)
    validate_real(value)
    validate_char(value)
    validate_string(value)
    validate_date(value)
    validate_dateInvl(value)
  }

  class Operations {
    --
    union_tables(table1, table2)
  }
}

Database --> Table : contains many
Table --> Column : has many
Table --> Row : stores many
Table ..> TypeValidator : uses for validation
Operations ..> Table : combines



@enduml